8372146: Follow-up changes to the Lazy Constants JEP
Reviewed-by: liach, mcimadamore, jvernee